--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,7 +3,7 @@
   --color-primary: #1b96f3;
   --color-secondary: #10133a;
 
-  --color-primary-transparent: rgba(27, 150, 243, .2);
+  --color-primary-transparent: rgba(27, 150, 243, .07);
 
   --color-white: #ffffff; // white
   --color-white-transparent: rgba(255, 255, 255, .8);
